# mental-health-signal-detector

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  cloudbuild.yaml  conftest.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.claude/: plan.md
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
.temp/: ahead_behind.txt  branches.txt  diff_names.txt  diff_names_wc.txt  diff_stat.txt  log_fabrice_to_stan.txt  log_stan_to_fabrice.txt  pytest_q.txt
configs/: api.yaml  dashboard.yaml  train.yaml
docker/: Dockerfile.api  Dockerfile.api.slim  Dockerfile.dashboard  Dockerfile.frontend  docker-compose.yml  nginx.conf  requirements.slim.txt
docs/: commands.md  phase3-roadmap.md
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  routes.ts
models/: depression_classifier.pkl  tfidf_vectorizer.pkl  xgb_depression_classifier.pkl  xgb_tfidf_vectorizer.pkl
notebooks/: Experiments.ipynb  Thomas.ipynb  Thomas_Shap.ipynb  aimen_Bert.ipynb  aimen_Linear_Regression.ipynb  aimen_XGBoost.ipynb  distilbert_finetune_colab.ipynb  model_comparison_table.ipynb  sgo.ipynb  stan.ipynb  thomas.ipynb
notebooks/aimen/: aimen_Bert.ipynb  aimen_Clean_Data.ipynb  aimen_Linear_Regression.ipynb  aimen_XGBoost.ipynb
notebooks/stan/: distilbert.ipynb  mental roberta base.ipynb  new_data_set_preparation.ipynb  prepare_balanced_dataset.ipynb  scrape_hapiness_data.ipynb  stan.ipynb  stan_cleaning_emotion.ipynb  stan_colab.ipynb  stan_logistic_regression.ipynb  stan_logistic_regression_balanced.ipynb  stan_logistic_regression_reduced.ipynb  stan_xgboost_balanced.ipynb
notebooks/thomas/: Thomas_Shap.ipynb  thomas_shap30k.ipynb
scripts/: convert_mental_roberta.py  download_emotion_dataset.py  run_api.sh  run_dashboard.sh  run_train.sh
src/api/: checkin_router.py  database.py  dependencies.py  main.py  rate_limit.py  schemas.py  services.py  solutions_router.py
src/checkin/: app.py  content.py  engine.py  schemas.py
src/common/: config.py  gdrive_loader.py  language.py  logging.py
src/dashboard/: about.py  app.py  examples.py  pages.py  shap.py  stats.py
src/data_cleaning/: data.py
src/solutions/: data.py  engine.py  schemas.py
src/training/: evaluate.py  predict.py  preprocess.py  train.py
tests/api/: conftest.py  (+5 more)
(+24 files in other folders)
