[tool.poetry]
package-mode = false

[project]
name = "mental-health-signal-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "Stanislav Grinchenko",email = "stasagr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "datasets (>=4.7.0,<5.0.0)",
    "kagglehub (>=1.0.0,<2.0.0)",
    "kaggle (>=2.0.0,<3.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=8.0.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D101", "D102", "D103"]  # pycodestyle, pyflakes, isort
